--- a/charting_script.ipynb
+++ b/charting_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,42 +10,187 @@
     "import matplotlib.dates as mdates\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas_datareader as web\n",
-    "from mpl_finance import candlestick_ohlc"
+    "import mplfinance as mpf\n",
+    "\n",
+    "# from pandas_datareader import data as pdr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = dt.datetime(2010, 1, 1)\n",
+    "company = 'AAPL'\n",
+    "\n",
+    "start = dt.datetime(2015, 1, 1)\n",
     "end = dt.datetime.now()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[39m=\u001b[39m web\u001b[39m.\u001b[39;49mDataReader(\u001b[39m'\u001b[39;49m\u001b[39mAAPL\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39myahoo\u001b[39;49m\u001b[39m'\u001b[39;49m, start, end)\n",
-      "File \u001b[1;32mc:\\Users\\tchac\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\util\\_decorators.py:210\u001b[0m, in \u001b[0;36mdeprecate_kwarg.<locals>._deprecate_kwarg.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    208\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(msg)\n\u001b[0;32m    209\u001b[0m     kwargs[new_arg_name] \u001b[39m=\u001b[39m new_arg_value\n\u001b[1;32m--> 210\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\tchac\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas_datareader\\data.py:370\u001b[0m, in \u001b[0;36mDataReader\u001b[1;34m(name, data_source, start, end, retry_count, pause, session, api_key)\u001b[0m\n\u001b[0;32m    367\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m(msg)\n\u001b[0;32m    369\u001b[0m \u001b[39mif\u001b[39;00m data_source \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39myahoo\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m--> 370\u001b[0m     \u001b[39mreturn\u001b[39;00m YahooDailyReader(\n\u001b[0;32m    371\u001b[0m         symbols\u001b[39m=\u001b[39;49mname,\n\u001b[0;32m    372\u001b[0m         start\u001b[39m=\u001b[39;49mstart,\n\u001b[0;32m    373\u001b[0m         end\u001b[39m=\u001b[39;49mend,\n\u001b[0;32m    374\u001b[0m         adjust_price\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[0;32m    375\u001b[0m         chunksize\u001b[39m=\u001b[39;49m\u001b[39m25\u001b[39;49m,\n\u001b[0;32m    376\u001b[0m         retry_count\u001b[39m=\u001b[39;49mretry_count,\n\u001b[0;32m    377\u001b[0m         pause\u001b[39m=\u001b[39;49mpause,\n\u001b[0;32m    378\u001b[0m         session\u001b[39m=\u001b[39;49msession,\n\u001b[0;32m    379\u001b[0m     )\u001b[39m.\u001b[39;49mread()\n\u001b[0;32m    381\u001b[0m \u001b[39melif\u001b[39;00m data_source \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39miex\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m    382\u001b[0m     \u001b[39mreturn\u001b[39;00m IEXDailyReader(\n\u001b[0;32m    383\u001b[0m         symbols\u001b[39m=\u001b[39mname,\n\u001b[0;32m    384\u001b[0m         start\u001b[39m=\u001b[39mstart,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    390\u001b[0m         session\u001b[39m=\u001b[39msession,\n\u001b[0;32m    391\u001b[0m     )\u001b[39m.\u001b[39mread()\n",
-      "File \u001b[1;32mc:\\Users\\tchac\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas_datareader\\base.py:253\u001b[0m, in \u001b[0;36m_DailyBaseReader.read\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    251\u001b[0m \u001b[39m# If a single symbol, (e.g., 'GOOG')\u001b[39;00m\n\u001b[0;32m    252\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msymbols, (string_types, \u001b[39mint\u001b[39m)):\n\u001b[1;32m--> 253\u001b[0m     df \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_read_one_data(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49murl, params\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_params(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msymbols))\n\u001b[0;32m    254\u001b[0m \u001b[39m# Or multiple symbols, (e.g., ['GOOG', 'AAPL', 'MSFT'])\u001b[39;00m\n\u001b[0;32m    255\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msymbols, DataFrame):\n",
-      "File \u001b[1;32mc:\\Users\\tchac\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas_datareader\\yahoo\\daily.py:153\u001b[0m, in \u001b[0;36mYahooDailyReader._read_one_data\u001b[1;34m(self, url, params)\u001b[0m\n\u001b[0;32m    151\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    152\u001b[0m     j \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(re\u001b[39m.\u001b[39msearch(ptrn, resp\u001b[39m.\u001b[39mtext, re\u001b[39m.\u001b[39mDOTALL)\u001b[39m.\u001b[39mgroup(\u001b[39m1\u001b[39m))\n\u001b[1;32m--> 153\u001b[0m     data \u001b[39m=\u001b[39m j[\u001b[39m\"\u001b[39;49m\u001b[39mcontext\u001b[39;49m\u001b[39m\"\u001b[39;49m][\u001b[39m\"\u001b[39;49m\u001b[39mdispatcher\u001b[39;49m\u001b[39m\"\u001b[39;49m][\u001b[39m\"\u001b[39;49m\u001b[39mstores\u001b[39;49m\u001b[39m\"\u001b[39;49m][\u001b[39m\"\u001b[39;49m\u001b[39mHistoricalPriceStore\u001b[39;49m\u001b[39m\"\u001b[39;49m]\n\u001b[0;32m    154\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[0;32m    155\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mNo data fetched for symbol \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m using \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-08-18</th>\n",
+       "      <td>172.3000</td>\n",
+       "      <td>175.1000</td>\n",
+       "      <td>171.9600</td>\n",
+       "      <td>174.4900</td>\n",
+       "      <td>6.111034e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-17</th>\n",
+       "      <td>177.1400</td>\n",
+       "      <td>177.5054</td>\n",
+       "      <td>173.4800</td>\n",
+       "      <td>174.0000</td>\n",
+       "      <td>6.606288e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-16</th>\n",
+       "      <td>177.1300</td>\n",
+       "      <td>178.5400</td>\n",
+       "      <td>176.5000</td>\n",
+       "      <td>176.5700</td>\n",
+       "      <td>4.696486e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-15</th>\n",
+       "      <td>178.8800</td>\n",
+       "      <td>179.4800</td>\n",
+       "      <td>177.0500</td>\n",
+       "      <td>177.4500</td>\n",
+       "      <td>4.362259e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-14</th>\n",
+       "      <td>177.9700</td>\n",
+       "      <td>179.6900</td>\n",
+       "      <td>177.3050</td>\n",
+       "      <td>179.4600</td>\n",
+       "      <td>4.367563e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-08</th>\n",
+       "      <td>24.5810</td>\n",
+       "      <td>25.2420</td>\n",
+       "      <td>24.4564</td>\n",
+       "      <td>25.1822</td>\n",
+       "      <td>2.636629e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-07</th>\n",
+       "      <td>24.1274</td>\n",
+       "      <td>24.3437</td>\n",
+       "      <td>24.0078</td>\n",
+       "      <td>24.2521</td>\n",
+       "      <td>1.780399e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-06</th>\n",
+       "      <td>24.0028</td>\n",
+       "      <td>24.1753</td>\n",
+       "      <td>23.5441</td>\n",
+       "      <td>23.9130</td>\n",
+       "      <td>2.921906e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-05</th>\n",
+       "      <td>24.3657</td>\n",
+       "      <td>24.4435</td>\n",
+       "      <td>23.7226</td>\n",
+       "      <td>23.9110</td>\n",
+       "      <td>2.855408e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-02</th>\n",
+       "      <td>25.0645</td>\n",
+       "      <td>25.0765</td>\n",
+       "      <td>24.1593</td>\n",
+       "      <td>24.6030</td>\n",
+       "      <td>2.363928e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2172 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Open      High       Low     Close        Volume\n",
+       "Date                                                            \n",
+       "2023-08-18  172.3000  175.1000  171.9600  174.4900  6.111034e+07\n",
+       "2023-08-17  177.1400  177.5054  173.4800  174.0000  6.606288e+07\n",
+       "2023-08-16  177.1300  178.5400  176.5000  176.5700  4.696486e+07\n",
+       "2023-08-15  178.8800  179.4800  177.0500  177.4500  4.362259e+07\n",
+       "2023-08-14  177.9700  179.6900  177.3050  179.4600  4.367563e+07\n",
+       "...              ...       ...       ...       ...           ...\n",
+       "2015-01-08   24.5810   25.2420   24.4564   25.1822  2.636629e+08\n",
+       "2015-01-07   24.1274   24.3437   24.0078   24.2521  1.780399e+08\n",
+       "2015-01-06   24.0028   24.1753   23.5441   23.9130  2.921906e+08\n",
+       "2015-01-05   24.3657   24.4435   23.7226   23.9110  2.855408e+08\n",
+       "2015-01-02   25.0645   25.0765   24.1593   24.6030  2.363928e+08\n",
+       "\n",
+       "[2172 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = web.DataReader('AAPL', 'yahoo', start, end)"
+    "df = web.DataReader(company, 'stooq', start, end)\n",
+    "\n",
+    "df\n",
+    "\n",
+    "# df = pdr.get_data_yahoo('AAPL', start='2020-01-01', end='2022-01-01')"
    ]
   }
  ],
