--- a/charting_script.ipynb
+++ b/charting_script.ipynb
@@ -10,9 +10,7 @@
     "import matplotlib.dates as mdates\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas_datareader as web\n",
-    "import mplfinance as mpf\n",
-    "\n",
-    "# from pandas_datareader import data as pdr"
+    "import mplfinance as mpf"
    ]
   },
   {
@@ -29,168 +27,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2023-08-18</th>\n",
-       "      <td>172.3000</td>\n",
-       "      <td>175.1000</td>\n",
-       "      <td>171.9600</td>\n",
-       "      <td>174.4900</td>\n",
-       "      <td>6.111034e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-08-17</th>\n",
-       "      <td>177.1400</td>\n",
-       "      <td>177.5054</td>\n",
-       "      <td>173.4800</td>\n",
-       "      <td>174.0000</td>\n",
-       "      <td>6.606288e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-08-16</th>\n",
-       "      <td>177.1300</td>\n",
-       "      <td>178.5400</td>\n",
-       "      <td>176.5000</td>\n",
-       "      <td>176.5700</td>\n",
-       "      <td>4.696486e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-08-15</th>\n",
-       "      <td>178.8800</td>\n",
-       "      <td>179.4800</td>\n",
-       "      <td>177.0500</td>\n",
-       "      <td>177.4500</td>\n",
-       "      <td>4.362259e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-08-14</th>\n",
-       "      <td>177.9700</td>\n",
-       "      <td>179.6900</td>\n",
-       "      <td>177.3050</td>\n",
-       "      <td>179.4600</td>\n",
-       "      <td>4.367563e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-08</th>\n",
-       "      <td>24.5810</td>\n",
-       "      <td>25.2420</td>\n",
-       "      <td>24.4564</td>\n",
-       "      <td>25.1822</td>\n",
-       "      <td>2.636629e+08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-07</th>\n",
-       "      <td>24.1274</td>\n",
-       "      <td>24.3437</td>\n",
-       "      <td>24.0078</td>\n",
-       "      <td>24.2521</td>\n",
-       "      <td>1.780399e+08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-06</th>\n",
-       "      <td>24.0028</td>\n",
-       "      <td>24.1753</td>\n",
-       "      <td>23.5441</td>\n",
-       "      <td>23.9130</td>\n",
-       "      <td>2.921906e+08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-05</th>\n",
-       "      <td>24.3657</td>\n",
-       "      <td>24.4435</td>\n",
-       "      <td>23.7226</td>\n",
-       "      <td>23.9110</td>\n",
-       "      <td>2.855408e+08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-02</th>\n",
-       "      <td>25.0645</td>\n",
-       "      <td>25.0765</td>\n",
-       "      <td>24.1593</td>\n",
-       "      <td>24.6030</td>\n",
-       "      <td>2.363928e+08</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2172 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Open      High       Low     Close        Volume\n",
-       "Date                                                            \n",
-       "2023-08-18  172.3000  175.1000  171.9600  174.4900  6.111034e+07\n",
-       "2023-08-17  177.1400  177.5054  173.4800  174.0000  6.606288e+07\n",
-       "2023-08-16  177.1300  178.5400  176.5000  176.5700  4.696486e+07\n",
-       "2023-08-15  178.8800  179.4800  177.0500  177.4500  4.362259e+07\n",
-       "2023-08-14  177.9700  179.6900  177.3050  179.4600  4.367563e+07\n",
-       "...              ...       ...       ...       ...           ...\n",
-       "2015-01-08   24.5810   25.2420   24.4564   25.1822  2.636629e+08\n",
-       "2015-01-07   24.1274   24.3437   24.0078   24.2521  1.780399e+08\n",
-       "2015-01-06   24.0028   24.1753   23.5441   23.9130  2.921906e+08\n",
-       "2015-01-05   24.3657   24.4435   23.7226   23.9110  2.855408e+08\n",
-       "2015-01-02   25.0645   25.0765   24.1593   24.6030  2.363928e+08\n",
-       "\n",
-       "[2172 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Open      High      Low   Close      Volume\n",
+      "Date                                                     \n",
+      "2023-08-18  172.30  175.1000  171.960  174.49  61110338.0\n",
+      "2023-08-17  177.14  177.5054  173.480  174.00  66062882.0\n",
+      "2023-08-16  177.13  178.5400  176.500  176.57  46964857.0\n",
+      "2023-08-15  178.88  179.4800  177.050  177.45  43622593.0\n",
+      "2023-08-14  177.97  179.6900  177.305  179.46  43675627.0\n"
+     ]
     }
    ],
    "source": [
     "df = web.DataReader(company, 'stooq', start, end)\n",
     "\n",
-    "df\n",
-    "\n",
-    "# df = pdr.get_data_yahoo('AAPL', start='2020-01-01', end='2022-01-01')"
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['Open', 'High', 'Low', 'Close']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Date      Open      High       Low     Close\n",
+      "0     19587.0  172.3000  175.1000  171.9600  174.4900\n",
+      "1     19586.0  177.1400  177.5054  173.4800  174.0000\n",
+      "2     19585.0  177.1300  178.5400  176.5000  176.5700\n",
+      "3     19584.0  178.8800  179.4800  177.0500  177.4500\n",
+      "4     19583.0  177.9700  179.6900  177.3050  179.4600\n",
+      "...       ...       ...       ...       ...       ...\n",
+      "2167  16443.0   24.5810   25.2420   24.4564   25.1822\n",
+      "2168  16442.0   24.1274   24.3437   24.0078   24.2521\n",
+      "2169  16441.0   24.0028   24.1753   23.5441   23.9130\n",
+      "2170  16440.0   24.3657   24.4435   23.7226   23.9110\n",
+      "2171  16437.0   25.0645   25.0765   24.1593   24.6030\n",
+      "\n",
+      "[2172 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.reset_index(inplace=True)\n",
+    "df['Date'] = df['Date'].map(mdates.date2num)"
    ]
   }
  ],
