--- a/charting_script.ipynb
+++ b/charting_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "import matplotlib.dates as mdates\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas_datareader as web\n",
-    "import mplfinance as mpf"
+    "from mpl_finance import candlestick_ohlc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,33 +61,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         Date      Open      High       Low     Close\n",
-      "0     19587.0  172.3000  175.1000  171.9600  174.4900\n",
-      "1     19586.0  177.1400  177.5054  173.4800  174.0000\n",
-      "2     19585.0  177.1300  178.5400  176.5000  176.5700\n",
-      "3     19584.0  178.8800  179.4800  177.0500  177.4500\n",
-      "4     19583.0  177.9700  179.6900  177.3050  179.4600\n",
-      "...       ...       ...       ...       ...       ...\n",
-      "2167  16443.0   24.5810   25.2420   24.4564   25.1822\n",
-      "2168  16442.0   24.1274   24.3437   24.0078   24.2521\n",
-      "2169  16441.0   24.0028   24.1753   23.5441   23.9130\n",
-      "2170  16440.0   24.3657   24.4435   23.7226   23.9110\n",
-      "2171  16437.0   25.0645   25.0765   24.1593   24.6030\n",
-      "\n",
-      "[2172 rows x 5 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.reset_index(inplace=True)\n",
     "df['Date'] = df['Date'].map(mdates.date2num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = plt.subplot()\n",
+    "candlestick_ohlc(ax, df.values, width=5, colorup='g', colordown='r')\n",
+    "ax.xaxis_date()\n",
+    "ax.grid(True)\n",
+    "\n",
+    "ax.set_axisbelow(True)\n",
+    "ax.set_title('AAPL Share Price', color='white')\n",
+    "ax.set_facecolor('black')\n",
+    "ax.figure.set_facecolor('#121212')\n",
+    "ax.tick_params(axis='x', colors='white')\n",
+    "ax.tick_params(axis='y', colors='white')\n",
+    "ax.xaxis_date()\n",
+    "plt.show()"
    ]
   }
  ],
